# notebooklm-clone

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.taskmaster/: config.json
.taskmaster/docs/: crawl-prd.txt  evaluation-docs-prd.txt  evaluation-enhancement-prd.txt  evaluation-v2-prd.txt  prd.txt
.taskmaster/tasks/: tasks.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_conversations.py  003_add_crawl_tables.py  004_add_test_case_difficulty.py  005_add_generation_evaluation_columns.py  d295474d0997_add_evaluation_tables.py
docs/evaluation/: generation-evaluation.md  question-difficulty.md  retrieval-evaluation.md  run-comparison.md
src/: __init__.py  __main__.py  database.py  exceptions.py  main.py  settings.py
src/chunk/: __init__.py  dependency.py
src/cli/: __init__.py  app.py  dependencies.py  error_handling.py  utils.py
src/common/: __init__.py  entity.py  pagination.py  rate_limit.py  repository.py  types.py
src/conversation/: __init__.py  dependency.py
src/crawl/: dependency.py
src/dependency/: __init__.py  container.py
src/document/: __init__.py  dependency.py
src/evaluation/: dependency.py
src/infrastructure/: __init__.py
src/notebook/: __init__.py  dependency.py
src/query/: __init__.py  dependency.py
tests/: __init__.py  conftest.py
tests/chunk/: __init__.py  test_model.py
tests/chunking/: __init__.py  test_service.py
tests/cli/: test_dependencies.py  test_error_handling.py
tests/conversation/: test_model.py  test_repository.py
(+187 files in other folders)
